# informatyka-sledcza-2021

./: .gitignore  README.md  diagram.md  main.py  pyproject.toml  run_proxy.py  run_quarantine.py  run_receiver.py  run_sender.py
data/: emails.json  trigger_words.txt
data/attachments/: test.txt
email_proxy/: __init__.py  client.py  db.py  email.py  handler.py  server.py  settings.py
email_proxy/proxy/: __init__.py  handler.py  proxy.py  report.py
email_proxy/proxy/filters/: filter.py  keywords.py  rbl.py  virus_total.py
email_proxy/quarantine/: __init__.py  handler.py
email_proxy/receiver/: __init__.py  handler.py
email_proxy/sender/: emails.json  loader.py  sender.py  settings.py
tests/: test_email_proxy.py
