[tool.poetry]
name = "email-proxy"
version = "0.1.0"
description = ""
authors = ["Jakub Ciszek <jakub@ratingcaptain.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiosmtpd = "^1.4.2"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.9b0"
ipykernel = "^6.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
